# UnityMeshLab

./: .gitignore  .npmignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  EXPERIMENTS.md  PLAN-orphan-vertices.md  README.md  REVIEW.md  commitmsg.txt  fix_bat.bat  package.json  tmp_push.bat  write_post.ps1
.claude/: settings.local.json
.claude/skills/: skills-overhaul-plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-native.yml  meta-check.yml  release.yml  test.yml
Documentation~/: CONFLICT_CHECK_LAST_5_PRS.md  EXPERIMENTS.md  FBX_EXPORT_MODERNIZATION.md  REVIEW.md  SWEEP_ANALYSIS_2026-04-19.md  TRANSFER_BENCHMARK.md  VERTEX_COLOR_BAKING_ARCHITECTURE.md
Editor/: BenchmarkRecorder.cs  BorderPrimitiveDetector.cs  BorderRepairAdapter.cs  BorderRepairSolver.cs  BuildValidator.cs  CheckerTexturePreview.cs  CollisionMeshBuilder.cs  ConvexDecompNative.cs  CoverageSplitSolver.cs  EdgeAnalyzer.cs  FbxMetricsExporter.cs  GroupedShellTransfer.cs  ImportSettingsAutoRepair.cs  InitialUvTransferSolver.cs  LightmapUvTool.Editor.asmdef  LodGroupUtility.cs  LodPipelineOps.cs  MeshHygieneUtility.cs  MeshOptimizer.cs  MeshSimplifier.cs  MeshoptNative.cs  ModelBuilderPreview.cs  PostprocessorDefineManager.cs  PrefabBuilderPreview.cs  SashaRX.UnityMeshLab.Editor.asmdef  ShellAssignmentSolver.cs  ShellColorModelPreview.cs  SourceMeshAnalyzer.cs  SpatialPartitioner.cs  StripParameterization.cs  SymmetrySplitShells.cs  TransferData.cs  TransferQualityEvaluator.cs  TransferValidator.cs  TriangleBvh.cs  TriangleBvh2D.cs  Uv0Analyzer.cs  Uv2AssetPostprocessor.cs  Uv2DataAsset.cs  UvMetricCalculator.cs  (+13 more)
Editor/Framework/: IUvTool.cs  MeshEntry.cs  UvCanvasView.cs  UvToolContext.cs  UvToolHub.cs
Editor/Settings/: MeshLabPreferences.cs  MeshLabProjectSettings.cs  TestSuiteAsset.cs
Editor/Tools/: AtlasPackTool.cs  CleanupTool.cs  CollisionMeshTool.cs  LightmapTransferTool.cs  LodGenerationTool.cs  ModelBuilderTool.cs  PrefabBuilderTool.cs  Uv0OptimizeTool.cs  UvPackHierarchyTool.cs  VariantExportPipeline.cs  VertexAOTool.cs  VertexColorBakingTool.cs
Native/: CMakeLists.txt  xatlas-unity-bridge.cpp
Native~/: build_native.bat
Native~/src/: collision.cpp
Plugins/macOS/: libxatlas-unity.dylib
Shaders/: CheckerUV2.shader  SpotProjection.shader  VertexAOAccum.compute  VertexAODepth.shader  VertexAORayTrace.compute
Tools/: build_gallery.py  gen.bat
_results/BenchmarkReports/: 20260419_124802_Playground_sweep_res256_pad2_bdr0_LegacyFixed-perMesh-splitTgt.csv  20260419_124802_Playground_sweep_res256_pad2_bdr0_LegacyFixed-perMesh-splitTgt.json  20260419_124807_Playground_sweep_res256_pad4_bdr0_LegacyFixed-perMesh-splitTgt.csv  20260419_124807_Playground_sweep_res256_pad4_bdr0_LegacyFixed-perMesh-splitTgt.json  20260419_124812_Playground_sweep_res256_pad6_bdr0_LegacyFixed-perMesh-splitTgt.csv  20260419_124812_Playground_sweep_res256_pad6_bdr0_LegacyFixed-perMesh-splitTgt.json  20260419_124817_Playground_sweep_res256_pad8_bdr0_LegacyFixed-perMesh-splitTgt.csv  20260419_124817_Playground_sweep_res256_pad8_bdr0_LegacyFixed-perMesh-splitTgt.json  20260419_124822_Playground_sweep_res256_pad32_bdr0_LegacyFixed-perMesh-splitTgt.csv  20260419_124822_Playground_sweep_res256_pad32_bdr0_LegacyFixed-perMesh-splitTgt.json  20260419_124828_Playground_sweep_res512_pad2_bdr0_LegacyFixed-perMesh-splitTgt.csv  20260419_124828_Playground_sweep_res512_pad2_bdr0_LegacyFixed-perMesh-splitTgt.json  20260419_124833_Playground_sweep_res512_pad4_bdr0_LegacyFixed-perMesh-splitTgt.csv  20260419_124833_Playground_sweep_res512_pad4_bdr0_LegacyFixed-perMesh-splitTgt.json  20260419_124838_Playground_sweep_res512_pad6_bdr0_LegacyFixed-perMesh-splitTgt.csv  20260419_124838_Playground_sweep_res512_pad6_bdr0_LegacyFixed-perMesh-splitTgt.json  20260419_124843_Playground_sweep_res512_pad8_bdr0_LegacyFixed-perMesh-splitTgt.csv  20260419_124843_Playground_sweep_res512_pad8_bdr0_LegacyFixed-perMesh-splitTgt.json  20260419_124848_Playground_sweep_res512_pad32_bdr0_LegacyFixed-perMesh-splitTgt.csv  (+106 more)
(+36 files in other folders)
